--- a/css/Home.css
+++ b/css/Home.css
@@ -7,6 +7,10 @@
 h1{
     margin: 0;
 }
+ul {margin-block: 0;
+    padding-inline-start: 0;
+    gap: 10px;
+}
 body{
     margin: 0;
     height: 100vh;
@@ -98,6 +102,11 @@ header button{
 
 
 }
+header button:hover{
+    background-color: rgb(214, 175, 59);
+cursor: pointer;
+
+}
 header .header-btn{
     display: flex;
     flex-direction: column;
@@ -106,6 +115,52 @@ header .header-btn{
     gap: 25px;
 }
 header .header-btn img{
-    height: 70px;
-    width: 70px;
+    height: 120px;
+    width: 100px;
+}
+footer {
+    width: 100%;
+    height: 400px;
+    background-color: black;
+    display: flex;
+    color: white;
+    flex-direction: column;
+}
+footer .footer-logo{
+    padding-left: 20px;
+}
+footer .footer-details{
+    display: flex;
+    justify-content: space-around;
+    padding: 0 20px;
+    position: relative;
+}
+footer .footer-details ul {
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+
+    
+ 
+}
+footer .footer-details .explore{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+footer .footer-details  h3 {
+  font-family: 'Itim', cursive; 
+  font-weight: bold;
+  margin-bottom: 10px;
+
+}
+footer .sponsor img {
+    height: 80px;
+    width: 120px;
+}
+.sponsor{
+    display: flex;
+    flex-direction: column;
 }
