--- a/css/SignIn.css
+++ b/css/SignIn.css
@@ -23,7 +23,6 @@
 
 .formulaire form{
     font-size: large;
-
     padding-top: 30px;
     color: rgba(0, 0, 0, 0.54);
     display: flex;
@@ -71,7 +70,8 @@ form a{
     font-size: x-large;
     display: flex;
     justify-content: end;
-    align-items: end;
+    align-content: end;
+    margin-right: 20px;
 }
 .ready p a{
     font-weight:bolder;
