--- a/css/Pret.css
+++ b/css/Pret.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Itim&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Castoro&display=swap');
+
+
 h1 {
     margin: 0;
 }
@@ -8,8 +14,63 @@ body {
     width: 100%;
 }
 
-nav {
+.burger img {
+    width: 45px;
+    height: 45px;
+
+}
+.show {
+    display: none;
+}
+.hide {display: none;}
+.mobile-menu {
+    display: none;
+    position: absolute;
+    top: 100px;
+    right: 0;
+    width: 20%;
+    height: 40%;
+    background-color: #EFEFEF;
+    z-index: 10;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 20px;
+    color: black;
+}
+
+/* Visible when the burger is clicked */
+.mobile-menu.active {
     display: flex;
+}
+
+.mobile-menu ul {
+    list-style: none;
+    padding: 0;
+    margin: 20px 0;
+    color: black;
+    z-index: 100;
+
+}
+
+.mobile-menu li {
+    margin: 20px 0;
+}
+
+.mobile-menu li a {
+    font-size: 20px;
+    text-decoration: none;
+    color: black;
+    font-family: 'Itim', cursive;
+}
+
+
+
+/* Responsive burger menu visible on smaller screens */
+
+nav {
+    display: flex   ;
     justify-content: space-between;
     background-color: #EFEFEF;
     padding: 0px 10px;
@@ -17,8 +78,7 @@ nav {
 
 
 }
-
-nav button {
+nav button{
     background-color: #D6AF3B;
     border-radius: 10px;
     border: none;
@@ -27,29 +87,44 @@ nav button {
     font-size: 25px;
     font-family: 'Inter', sans-serif;
 
-
+ 
 }
-
-nav img {
+nav img{
     width: 240px;
     height: 100px;
 }
-
 nav .nav-links {
     font-size: 25px;
     list-style: none;
     gap: 50px;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+align-items: center;
 
 }
-
-nav .nav-links li a {
+nav ul {
+    display: block;
+}
+nav button {
+    display: block;
+}
+nav .nav-links li a{
     color: black;
     text-decoration: none;
     font-family: 'Itim', cursive;
 
+}
+.burger {
+    display: none;
+    cursor: pointer;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.burger div {
+    width: 25px;
+    height: 3px;
+    background-color: black;
 }
 
 .pret {
@@ -171,4 +246,26 @@ nav .nav-links li a {
     font-size: 25px;
     font-weight: 500;
     cursor: pointer;
+}
+@media screen and ( max-width: 768px) {
+    .show {
+        display: block;
+    }
+  
+
+
+    .burger {display: block;
+    gap: 5px;}
+    nav .nav-links ul {
+        display: none;
+    }
+    nav  button {
+        display: none;
+    }
+    
+  
+    nav .nav-links {
+        display: none;
+    }
+   
 }
