--- a/css/Projects.css
+++ b/css/Projects.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Itim&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Castoro&display=swap');
+
+
 *{
 	box-sizing: border-box;
     text-decoration: none;
@@ -20,12 +26,69 @@ body{
     height: auto;
     width: 100%;
 }
-nav {
+.burger img {
+    width: 45px;
+    height: 45px;
+
+}
+.show {
+    display: none;
+}
+.hide {display: none;}
+.mobile-menu {
+    display: none;
+    position: absolute;
+    top: 100px;
+    right: 0;
+    width: 20%;
+    height: 40%;
+    background-color: #EFEFEF;
+    z-index: 10;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 20px;
+    color: black;
+}
+
+/* Visible when the burger is clicked */
+.mobile-menu.active {
     display: flex;
+}
+
+.mobile-menu ul {
+    list-style: none;
+    padding: 0;
+    margin: 20px 0;
+    color: black;
+    z-index: 100;
+
+}
+
+.mobile-menu li {
+    margin: 20px 0;
+}
+
+.mobile-menu li a {
+    font-size: 20px;
+    text-decoration: none;
+    color: black;
+    font-family: 'Itim', cursive;
+}
+
+
+
+/* Responsive burger menu visible on smaller screens */
+
+nav {
+    display: flex   ;
     justify-content: space-between;
     background-color: #EFEFEF;
     padding: 0px 10px;
     align-items: center;
+
+
 }
 nav button{
     background-color: #D6AF3B;
@@ -51,11 +114,29 @@ nav .nav-links {
 align-items: center;
 
 }
+nav ul {
+    display: block;
+}
+nav button {
+    display: block;
+}
 nav .nav-links li a{
     color: black;
     text-decoration: none;
     font-family: 'Itim', cursive;
 
+}
+.burger {
+    display: none;
+    cursor: pointer;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.burger div {
+    width: 25px;
+    height: 3px;
+    background-color: black;
 }
 .head {
     display: flex;
@@ -283,4 +364,25 @@ footer .sponsor .v {
     footer .footer-details ul {
         padding: 0; 
     }
+}@media screen and ( max-width: 768px) {
+    .show {
+        display: block;
+    }
+  
+
+
+    .burger {display: block;
+    gap: 5px;}
+    nav .nav-links ul {
+        display: none;
+    }
+    nav  button {
+        display: none;
+    }
+    
+  
+    nav .nav-links {
+        display: none;
+    }
+   
 }
