--- a/css/Projects.css
+++ b/css/Projects.css
@@ -62,21 +62,25 @@ nav .nav-links li a{
     display: flex;
     justify-content: center;
     align-content: center;
+    align-items: center;
     gap: 70px;
     flex-wrap: wrap;
     margin-top: 50px;
-
+}
+.head div{
+    width: calc(80%/2);
 }
 .head img{
-    max-width: 100%;
+    width: 100%;
+    height: 100%;
 }
 .we{
     max-width: 100%;
 }
 .whorwe {
     display: flex;
-    width: 500px;
-    height: 425px;
+    width: 100%;
+    min-height: 100%;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -85,6 +89,9 @@ nav .nav-links li a{
     font-size: x-large;
     border-radius: 9px;
     box-shadow :3px 5px 5px   #D6AF3B;
+}
+.head div {
+    align-self: stretch;
 }
 .whorwe p{
 
@@ -287,5 +294,27 @@ footer .sponsor .v {
     }
     footer .footer-details ul {
         padding: 0; 
+    }
+}
+@media (min-width: 1280px) {
+    nav {
+        padding: 0 50px; 
+    }
+    nav .nav-links {
+        gap: 50px; }
+    .gride {
+        grid-template-columns: repeat(3, 1fr); 
+        margin-left: auto; 
+        margin-right: auto;
+    }
+    /* .new{
+        min-width: ;
+    } */
+    .whorwe {
+        font-size: xx-large;
+    }
+    footer {
+        padding: 20px 50px; 
+        font-size: large; 
     }
 }
