--- a/css/Pret.css
+++ b/css/Pret.css
@@ -152,6 +152,7 @@ nav .nav-links li a {
 
 .contact img {
     padding: 0px 20px;
+    width: 45em;
 }
 
 .formulaire {
@@ -171,4 +172,34 @@ nav .nav-links li a {
     font-size: 25px;
     font-weight: 500;
     cursor: pointer;
+}
+
+article {
+    padding: 0px 30px;
+    font-size: 18px;
+}
+
+
+@media (width: 1400px) {
+    header {
+        padding: 17px 3%;
+        transition: .2s;
+    }
+
+    header.sticky {
+        padding: 10px 3%;
+        transition: .2s;
+    }
+
+    section {
+        padding: 80px 3%;
+        transition: .2s;
+    }
+
+    :root {
+        --big-font: 4.5rem;
+        --h2-font: 2.3rem;
+        --p-font: 1rem;
+        transition: .2s;
+    }
 }
